Support Windows 7 32-bit backend runner